config/samples/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    
spec:
  rules:
  
  - host: www.lms-openedx.apps.demo.coreostrain.me
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: preview.www.lms-openedx.apps.demo.coreostrain.me
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: studio.www.lms-openedx.apps.demo.coreostrain.me
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
